tests/functional/lang/eval-fail-toString-returns-non-coercible.err.exp
error:
       … while evaluating the result of the `__toString` attribute
         at /pwd/lang/eval-fail-toString-returns-non-coercible.nix:2:6:
            1| # interpolation checks the return type of __toString
            2| "${{ __toString = self: null; }}"
             |      ^
            3|

       … while evaluating a path segment
         at /pwd/lang/eval-fail-toString-returns-non-coercible.nix:2:2:
            1| # interpolation checks the return type of __toString
            2| "${{ __toString = self: null; }}"
             |  ^
            3|

       error: cannot coerce null to a string: null
